* fix synonyms of registers from `rex.w` on byte-size operands with register
  number <4
* adjust misleading docs on `register_class::B` and `register_class::RB`: being
  in register class `B` does not imply that there was no `rex.w` on the
  instruction - `rex.w` may have been present but the register number may have
  been <4 such that `B` was an appropriate register class anyway.

## 1.2.0
* fix incorrect old yaxpeax-arch version selection for ffi crates
* address incorrect behavior of `Prefixes::cs()`
  * this "getter" would in fact set the selected segment to `cs`. it has never
    actually returned a `bool`, like other selector-checking methods on
    `Prefixes`.
* add `Opcode::is_jcc`, `Opcode::is_setcc`, and `Opcode::is_cmovcc` helpers
  * discovered that `jna` and `jnb` are named what they are, instead of
    `jbe`/`jae` like their `setcc` an `cmovcc` counterparts. sorry. these will
    become `jbe` and `jae` in 2.x.
* fix incorrect decode of a0/a1/a2/a3 mov register when rex.b is set
  (rex.b would select register 8, but the register is unconditionally A)
* fix incorrect handling of some variants of gather instructions,
  vpgatherdq, vpgatherqq, vgatherdps, vgatherdpd, vgatherqps, vgatherqpd.
  errors were any of:
  * reporting qword loads when loads are dword-wide
  * reporting dword loads when loads are qword-wide
  * reporting ymm register sizes when sizes are actually xmm
  * reporting xmm register sizes when sizes are actually ymm
  * reporting index register as ymm when it is actually xmm
* extended support for some newer instructions (pconfig, movdir64b) from just
  64-bit to all decode modes
* fix cvttsd2si/cvtsd2si reporting xmm registers as destinations in 64-bit mode
* fix inconsistently-reported memory access size of vcvt{,t}{sd,si} across
  encodings and bitness
  * in some cases, instructions loading a single-precision float reported 8-byte loads
  * in some cases, instructions loading a double-precision float reported 4-byte loads